# ai-engineer-roadmap

./: CONTRIBUTING.md  PHILOSOPHY.md  README.md  docker-compose.yaml  pyproject.toml  roteiro_aprovado.md  test_subagents.py
.claude/: settings.local.json
01-foundations/01-ai-engineer-profession/: README.md
01-foundations/02-python-environment/: README.md
01-foundations/06-pydantic-v2/: README.md
01-foundations/07-engineering-mindset/: README.md
01-fundamentals/: README.md
01-fundamentals/01-ai-engineer-profession/: CONTENT.md  PAPERS.md  README.md
01-fundamentals/01-profession-market/: README.md
01-fundamentals/02-llm-fundamentals/: README.md
01-fundamentals/02-python-env/: README.md
01-fundamentals/02-python-for-ai/: README.md  openai_demo.py
01-fundamentals/03-fastapi/: README.md  fastapi_example.py  main.py  models.py  router.py
01-fundamentals/03-fastapi-backend/: README.md
01-fundamentals/03-git-workflow/: README.md
01-fundamentals/03-python-for-ai/: CONTENT.md  langchain_demo.py  llamaindex_demo.py  openai_demo.py
01-fundamentals/04-data-modeling/: 01_basic_fields.py  02_validators.py  07_error_handling.py  README.md  exercises.py
01-fundamentals/04-fastapi/: README.md  endpoint.py  models.py  router.py
01-fundamentals/04-python-for-ai/: README.md
01-fundamentals/05-data-modeling/: 01_basic_fields.py  01_pydantic_overview.py  02_validators.py  03_serialization.py  04_types.py  05_unions.py  06_settings.py  08_pipeline.py  README.md  endpoint.py  models.py  router.py
01-fundamentals/05-databases/: 02_setup_qdrant.py  04_search.py  05_filtering.py  06_indexing.py  07_hybrid_search.py  README.md
01-fundamentals/05-fastapi/: README.md
01-fundamentals/05-fastapi-foundations/: README.md
01-fundamentals/06-databases/: 08_sparse_vs_dense.py  README.md
01-fundamentals/06-llm-fundamentals/: README.md
01-fundamentals/07-rag-fundamentals/: README.md
01-fundamentals/08-observability/: README.md
01-fundamentals/09-deploy-production/: README.md
02-rag/: README.md
02-rag-systems/: README.md
02-rag-systems/02-ingestion-pipeline/: README.md
02-rag-systems/03-embeddings/: README.md
02-rag-systems/05-retrieval-strategies/: README.md
02-rag-systems/07-langgraph/: README.md
02-rag-systems/08-llamaindex/: README.md
02-rag-systems/09-evaluation/: README.md
02-rag-systems/10-rag-production/: README.md
02-rag/01-rag-fundamentals/: README.md
02-rag/02-ingestion-pipeline/: 01_text_extraction_pypdf.py  02_layout_parsing_docling.py  03_chunking_recursive.py  04_chunking_token.py  README.md  (+1 more)
03-ai-agents/: README.md
04-infra-ocr-models/: README.md
05-fine-tuning/: README.md
shared/: README.md
(+202 files in other folders)
